--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,3 +17,6 @@
     </nav>
 </div>
 <hr>
+<script type="text/javascript"
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
