Change circle to disc

--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -151,7 +151,7 @@ body {
     }
     ul {
         list-style-position: outside;
-	list-style-type: circle;
+	list-style-type: disc;
         padding-left: 1em;
 	text-align:justify;
 	-webkit-hyphens: none;
