Update the position of date

--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -74,9 +74,9 @@ body {
 }
 
 #content #date {
-    text-align: right;
+    text-align: left;
     font-weight: normal;
-    margin: 0px 10px 40px 0px;    
+    margin: 30px 10px 20px 0px;    
 }
 
 #content div.ox-hugo-toc {
