--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -18,29 +18,29 @@ $y-medium: 1.0rem;
 // }
 %link-default
 {
-    color: #586e75;
-    border-bottom: dotted 1px #586e75;
+    color: $red;
+    // border-bottom: dotted 1px $black;
     text-decoration: none;
     &:hover
     {
 	background-color: #eee8d5;
-	color: #586e75;
+	color: $black;
     }
     
 }
 
 body {
-    background-color: #fdf6e3;
+    background-color: #ffffff;
 }
 
 %link-dark {
-    color: #586e75;
+    color: $black;
     text-decoration: none;
     & * {
-        color: #586e75;
+        color: $black;
     }
     &:hover {
-        color: #586e75;
+        color: $black;
         text-decoration: underline;
     }
 }
@@ -52,7 +52,7 @@ body {
 
 // Style
 * {
-    color: #586e75;
+    color: $black;
     line-height: 1.2;
 }
 .container {
@@ -60,7 +60,7 @@ body {
 }
 .navbar-brand {
     @extend %link-dark;
-    color: #586e75;
+    color: $black;
     font-size: 2rem;
 }
 .nav-link {
@@ -120,7 +120,7 @@ body {
         margin-bottom: $y-small;
     }
     h1, h2, h3, h4, h5, h6 {
-	color: #586e75;
+	color: $black;
         font-size: medium;
         font-weight: bold;
         margin: $y-medium 0 $y-small 0;
